<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dip"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/about_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/about_author_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_author_university"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
   	<View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_marginTop="6dip"
		android:layout_marginBottom="5dip"
		android:background="@android:color/darker_gray"/>
    
    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/about_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version_number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>