<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="0.23"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/start_menu_image_logo"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/start_menu_button_new_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_menu_new_game" />

        <Button
            android:id="@+id/start_menu_button_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_menu_settings" />

        <Button
            android:id="@+id/start_menu_button_stats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_menu_stats" />

        <Button
            android:id="@+id/start_menu_button_help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_menu_help" />

        <Button
            android:id="@+id/start_menu_button_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_menu_about" />
    </LinearLayout>

</LinearLayout>